# ecumaster-virtual-cockpit

./: .gitignore  README.md  config.py  pyproject.toml  requirements.txt
data/: data.json  odometer.json
src/: io_teensy.py  main.py  telemetry.py
systemd/: gauges.service
ui/: DevPanel.qml  Main.qml
ui/components/: FuelGauge.qml  Gauge.qml  Icons.qml  LeftCluster.qml  RightCluster.qml  WaterTempGauge.qml
